--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,10 @@
     <display-name>web06</display-name>
 
     <!-- 컨텍스트 초기화 파라미터 -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/application-context.properties</param-value>
+    </context-param>
 
     <!-- 필터 선언 -->
 
