--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'javax.servlet.jsp.jstl', name: 'jstl-api', version: '1.2'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.14'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
